--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,14 @@ $breakpoints: (
         &{ @content; }
     }
 }
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
+$strong-cyan: hsl(172, 67%, 45%);
+$very-dark-cyan: hsl(183, 100%, 15%);
+$dark-grayish-cyan: hsl(186, 14%, 43%);
+$grayish-cyan: hsl(184, 14%, 56%);
+$light-grayish-cyan: hsl(185, 41%, 84%);
+$very-light-grayish-cyan: hsl(189, 41%, 97%);
+$white: hsl(0, 0%, 100%);
 * {
     padding: 0;
     margin: 0;
@@ -18,6 +26,22 @@ $breakpoints: (
 }
 html {
     font-size: 62.5%;
+}
+body {
+    background-color: $white;
+}
+.background {
+    background-color: $light-grayish-cyan;
+}
+.calculator {
+    background-color: $white;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.result {
+    background-color: $very-dark-cyan;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
