--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 html {
   font-size: 62.5%;
+  font-family: "Space Mono";
 }
 
 body {
@@ -21,6 +22,25 @@ body {
   background-color: hsl(0deg, 0%, 100%);
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  padding: 20px;
+}
+.calculator .bill input {
+  background-color: hsl(189deg, 41%, 97%);
+  border: none;
+}
+.calculator .tip {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
+.calculator .tip label {
+  grid-area: 1/1/2/3;
+}
+.calculator label {
+  display: block;
+  color: hsl(186deg, 14%, 43%);
 }
 
 .result {
