--- a/style.scss
+++ b/style.scss
@@ -31,6 +31,11 @@ html {
 body {
     background-color: $white;
 }
+.logo {
+    display: block;
+    margin: 0 auto;
+    padding: 30px 0;
+}
 .background {
     background-color: $light-grayish-cyan;
 }
@@ -39,11 +44,35 @@ body {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     padding: 20px;
-    .bill {
+    .input {
+        position: relative;
+        margin-top: 10px;
         input {
             background-color: $very-light-grayish-cyan;
+            box-sizing: border-box;
             border: none;
+            height: 40px;
+            width: 100%;
+            color: $very-dark-cyan;
+            font-size: 1.9rem;
+            font-weight: 700;
+            direction: rtl;
+            padding-right: 20px;
         }
+        img {
+            position: absolute;
+            top: 12px;
+            left: 10px;
+        }
+    }
+    label {
+        display: block;
+        color: $dark-grayish-cyan;
+        font-size: 1.4rem;
+        margin-top: 15px;
+    }
+    .bill label {
+        margin: 0;
     }
     .tip {
         display: grid;
@@ -52,16 +81,19 @@ body {
         grid-column-gap: 20px;
         grid-row-gap: 20px;
         label { grid-area: 1 / 1 / 2 / 3; }
-        // &:nth-child(2) { grid-area: 2 / 1 / 3 / 2; }
-        // &:nth-child(3) { grid-area: 2 / 2 / 3 / 3; }
-        // &:nth-child(4) { grid-area: 3 / 1 / 4 / 2; }
-        // &:nth-child(5) { grid-area: 3 / 2 / 4 / 3; }
-        // &:nth-child(6) { grid-area: 4 / 1 / 5 / 2; }
-        // &:nth-child(7) { grid-area: 4 / 2 / 5 / 3; }
-    }
-    label {
-        display: block;
-        color: $dark-grayish-cyan;
+        button {
+            border: none;
+            border-radius: 7px;
+            background-color: $very-dark-cyan;
+            color: $white;
+            font-weight: 700;
+            font-size: 1.6rem;
+            height: 50px;
+            &:last-of-type {
+                background-color: $very-light-grayish-cyan;
+                color: $grayish-cyan;
+            }
+        }
     }
 }
 .result {
